--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-signature-canvas": "^1.1.0-alpha.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@microsoft/eslint-plugin-power-apps": "^0.2.6",
